# macbot

./: .gitignore  LICENSE  README.md
docs/: mapping.md  path_planning.md
macbot/: CMakeLists.txt  package.xml
macbot_description/: CMakeLists.txt  package.xml
macbot_description/config/: diff_drive_controller_params.yaml  gazebo_ros_control_params.yaml
macbot_description/meshes/: camera.dae  caster.dae  left_wheel.dae  lidar.dae  right_wheel.dae
macbot_description/rviz/: mapping.rviz  navigation.rviz  robot.rviz  sensors.rviz
macbot_description/urdf/: material.xacro  robot_textured.gazebo  robot_textured.xacro  robot_textureless.gazebo  robot_textureless.xacro
macbot_gazebo/: CMakeLists.txt  package.xml
macbot_gazebo/launch/: default.launch  teleop.launch
macbot_gazebo/model/maze/: model.config  model.sdf
macbot_gazebo/model/maze_short_textured/: model.config  model.sdf
macbot_gazebo/model/maze_textured/: model.config  model.sdf
macbot_gazebo/script/: gazebo_empty_world.sh
macbot_gazebo/world/: empty.world  maze.world
macbot_navigation/: CMakeLists.txt  package.xml
macbot_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  params.yaml
macbot_navigation/launch/: amcl.launch  amcl_macbot.launch  gmap.launch  gmap_macbot.launch  gmap_static.launch  localization.launch
macbot_navigation/map/: enviro.yaml  gmap_map.yaml  student_macbot_gmap.yaml
macbot_navigation/src/: frame_tf_broadcaster.cpp
macbot_physical/: CMakeLists.txt  package.xml
macbot_physical/launch/: diff_drive.launch
macbot_physical/nodes/: goLinkManager.py  macbot_node.py  tf_broadcaster.py
macbot_physical/script/: golink-bus-init.sh
macbot_sensors/: CMakeLists.txt  package.xml
macbot_sensors/launch/: camera.launch  lidar.launch  sensors.launch
macbot_sensors/nodes/: pose_odom.py
