<?xml version="1.0"?>
<package format="2">
  <name>macbot</name>
  <version>0.0.0</version>
  <description>The MacBot metapackage</description>
  <maintainer email="hsiaoy4@mcmaster.ca">Eech Hsiao</maintainer>
  <author email="hsiaoy4@mcmaster.ca">Eech Hsiao</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>macbot_description</exec_depend>
  <exec_depend>macbot_navigation</exec_depend>
  <exec_depend>macbot_gazebo</exec_depend>
  <exec_depend>macbot_sensors</exec_depend>
  <exec_depend>macbot_physical</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
