<?xml version="1.0"?>
<package format="2">
  <name>macbot_sensors</name>
  <version>0.0.0</version>
  <description>The macbot_navigation package</description>
  <maintainer email="hsiaoy4@mcmaster.ca">Eech Hsiao</maintainer>
  <author email="hsiaoy4@mcmaster.ca">Eech Hsiao</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
